--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "source": "src/index.html",
   "jest": {
     "transform": {
-      "^.+\\.(ts)$": [ "babel-jest", { "configFile": "./babelJest.config.js" } ]
+      "^.+\\.(ts)$": [
+        "babel-jest",
+        {
+          "configFile": "./babelJest.config.js"
+        }
+      ]
     }
   },
   "scripts": {
     "start": "parcel",
     "prebuild": "rm -rf dist",
     "build": "parcel build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -21,9 +28,8 @@
     "@babel/preset-typescript": "^7.16.7",
     "@types/jest": "^27.4.0",
     "babel-jest": "^27.4.6",
+    "gh-pages": "^3.2.3",
     "jest": "^27.4.7",
     "parcel": "^2.2.1"
-  },
-  "dependencies": {
   }
 }
