--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "parcel",
     "prebuild": "rm -rf dist",
-    "build": "parcel build",
+    "build": "parcel build --public-url ./",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "test": "jest",
